fix modal height issue & spacing issue

--- a/src/shopApp.module.css
+++ b/src/shopApp.module.css
@@ -45,12 +45,12 @@
 .reactModalContent {
   font-family: "Open Sans";
   position: absolute;
-  top: 120px;
+  top: 25%;
   left: 0;
   right: 0;
   bottom: 120px;
   width: 750px;
-  height: auto;
+  height: 480px;
   margin: 0 auto;
   background: #ffffff;
   border: none;
@@ -74,7 +74,7 @@
 .modalContentHelper {
   position: relative;
   height: 100%;
-  padding: 64px 0;
+  padding: 32px 0;
 }
 
 .modalClose {
